added comments in qc, started inventory accounts page

--- a/app/templates/inventory_management/edit_product.html
+++ b/app/templates/inventory_management/edit_product.html
@@ -16,6 +16,8 @@
 			<div>
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
+					{{ form.supplier.label(class_="contol-label") }}
+					{{ form.supplier(class_="form-control") }}
 					{{ form.price.label(class_="contol-label") }}
 					{{ form.price(class_="form-control") }}
 					{{ form.min_quantity.label(class_="contol-label") }}
