--- a/app/templates/quality_control_sample.html
+++ b/app/templates/quality_control_sample.html
@@ -240,9 +240,15 @@
 	<div class="row text-center">
 		<div class="col-md-12 chart-container text-center" id="chartContainer">
 			<canvas id="chartjs" ></canvas>
+			
 		</div>
 	</div>
-	
+	<div class="row">
+		<div class="col-md-12">
+			<label>Comments:</label>
+			<textarea class="form-control" rows="3"></textarea>
+		</div>
+	</div>
 </div>
 
 {% endblock %}
