--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,6 +36,7 @@
 					{{ nav_link('calculators', 'Calculators') }}
 					{{ nav_link('quality_control_sample', 'Quality Control') }}
 					{{ nav_link('guides', 'Guides') }}
+					{{ nav_link('inventory_management_demo', 'Inventory Demo') }}
 					{% if current_user == superuser %}
 					{{ nav_link('stream', 'Stream')}}
 					{% endif %}
