--- a/app/templates/quality_control.html
+++ b/app/templates/quality_control.html
@@ -264,6 +264,12 @@
 			<canvas id="chartjs" ></canvas>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<label>Comments:</label>
+			<textarea class="form-control" rows="3"></textarea>
+		</div>
+	</div>
 </div>
 <div class="container-fluid visible-print-block">
 	<div class="row">
