--- a/app/templates/inventory_management/total_purchases.html
+++ b/app/templates/inventory_management/total_purchases.html
@@ -17,6 +17,7 @@
 						<th>To</th>
 						<th>Supplier</th>
 						<th>Department</th>
+						<th></th>
 					</tr>
 					<tr>
 						<td>Total Purchases</td>
@@ -24,11 +25,52 @@
 						<td>{{ form.end_date(class_="form-control", type="date") }}</td>
 						<td>{{ form.supplier(class_="form-control") }}</td>
 						<td>{{ form.department(class_="form-control") }}</td>
-						<td>{{ form.submit(class_="form-control btn btn-default") }}</td>
+						<td>{{ form.submit(class_="form-control btn btn-default hidden-print") }}</td>
 					</tr>
 				</table>
 			</form>
 			</div>
+			<div class="col-md-12 text-center">
+				<table>
+					<thead>
+						<tr>
+							<th class="col-md-2">PO Number</th>
+							<th class="col-md-1">Date Purchased</th>
+							<th class="col-md-1">Purchased by</th>
+							<th class="col-md-1">Total Cost</th>
+							
+						</tr>
+					</thead>
+					{% for purchase in purchases %}
+					<tr>
+						<td>{{ company.company_abbrv }}-PO-{{ purchase.purchase_order_no }}</td>
+						<td>{{ purchase.date_purchased }}</td>
+						<td>{% for p in purchase.purchased_by %}{{ p.username }}{% endfor %}</td>
+						<td class="individual_total">{{ purchase.total }}</td>
+					</tr>
+					{% endfor %}
+				</table>
+				<div style="width: 200px;float: right; margin-bottom: 20px;">
+					<div id="subtotal_container">Total: <span id="total_price" style="color: blue;"></span></div>
+				</div>
+			</div>
 		</div>
 	</div>
+{% endblock %}
+
+{% block scripts %}
+{{ super()}}
+<script>
+$(document).ready(function() {
+	if ($(".individual_total").length > 0) {
+	$("#subtotal_container").css("display", "block");
+	}
+	
+	var sum = 0;
+	$(".individual_total").each(function() {
+		sum += parseFloat($(this).text());
+		$("#total_price").html(sum);
+	});
+});
+</script>
 {% endblock %}
