changed company page fonts to 12px, added sort table to order-purchase list

--- a/app/templates/inventory_management/purchase_list.html
+++ b/app/templates/inventory_management/purchase_list.html
@@ -28,15 +28,17 @@
 					</div>
 				</div>
 			</div>
-			<table class="table table-bordered table-hover" id="create_order_table">
-			<tr>
-				<th style="width:150px;">Ref No</th>
-				<th style="width:500px;">Name</th>
-				<th style="width:150px;">Supplier</th>
-				<th style="width:100px;">Qty Remaining </th>
-				<th style="width:40px;">Quantity Request </th>
-				<th></th>
-			</tr>
+			<table class="sort_table table table-bordered table-hover" id="create_order_table">
+			<thead>
+				<tr>
+					<th style="width:150px;">Ref No</th>
+					<th style="width:500px;">Name</th>
+					<th style="width:150px;">Supplier</th>
+					<th style="width:100px;">Qty Remaining </th>
+					<th style="width:40px;">Quantity Request </th>
+					<th>Action</th>
+				</tr>
+			</thead>
 			{% if my_supplies %}
 				{% for my_s in my_supplies %}
 				<tr class="my_products_row">
@@ -72,16 +74,21 @@
 				</select>
 			</div>
 			<div class="col-md-12">
-			<table class="table table-bordered table-hover text-center" id="orders_list_table">
-				<tr>
-					<th>Reference No</th>
-					<th>Name</th>
-					<th>Price Each</th>
-					<th>Quantity</th>
-					<th>Total Price</th>
-					<th>Supplier</th>
-					<th>Added by</th>
-				</tr>
+			<table class="sort_table table table-bordered table-hover text-center" id="orders_list_table">
+				<thead>
+					<tr>
+						<th>Reference No</th>
+						<th>Name</th>
+						<th>Price Each</th>
+						<th>Quantity</th>
+						<th>Total Price</th>
+						<th>Supplier</th>
+						<th>Added by</th>
+						{% if not purchase.date_purchased %}
+						<th>Action</th>
+						{% endif %}
+					</tr>
+				</thead>
 				{% for list in purchase_list %}
 					<tr class="orders_list_row">
 						<td>{{ list.ref_number }}</td>
