--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -113,6 +113,11 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js" integrity="sha256-w6/1B0uwkpR3uX0YUw3k2zzHnq6xDNdVZHLIdz8xV6I=" crossorigin="anonymous"></script>
 	<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script-->
 	<link rel="shortcut icon" href="/static/logo.jpg">
+	<style>
+	body {
+		font-size: 12px;
+	}
+	</style>
 {% endblock %}
 
 {% block scripts %}
