--- a/app/templates/inventory_management/create_orders.html
+++ b/app/templates/inventory_management/create_orders.html
@@ -28,14 +28,17 @@
 					</div>
 				</div>
 			</div>
-			<table class="table table-bordered table-hover" id="create_order_table">
-			<tr>
-				<th style="width:150px;">Ref No</th>
-				<th style="width:500px;">Name</th>
-				<th style="width:120px;">Supplier</th>
-				<th style="width:130px;">Qty Remaining </th>
-				<th style="width:40px;">Quantity Request </th>
-			</tr>
+			<table class="sort_table table table-bordered table-hover" id="create_order_table">
+			<thead>
+				<tr>
+					<th style="width:150px;">Ref No</th>
+					<th style="width:500px;">Name</th>
+					<th style="width:120px;">Supplier</th>
+					<th style="width:130px;">Qty Remaining </th>
+					<th style="width:40px;">Quantity Request </th>
+					<th>Action</th>
+				</tr>
+			</thead>
 			{% if my_supplies %}
 				{% for my_s in my_supplies %}
 				<tr class="my_products_row">
@@ -60,14 +63,19 @@
 		</button>
 		{% endif %}
 		<span class="text-center"><h4>Order No: <span style="color: blue;">{{ company.company_abbrv }}-ORD-{{ order.order_no }}</span></h4> </span>
-			<table class="table table-bordered table-hover text-center" id="orders_list_table">
-				<tr>
-					<th>Reference No</th>
-					<th>Name</th>
-					<th>Quantity</th>
-					<th>Supplier</th>
-					<th>Added by</th>
-				</tr>
+			<table class="sort_table table table-bordered table-hover text-center" id="orders_list_table">
+				<thead>
+					<tr>
+						<th>Reference No</th>
+						<th>Name</th>
+						<th>Quantity</th>
+						<th>Supplier</th>
+						<th>Added by</th>
+						{% if not order.date_submitted %}
+						<th>Action</th>
+						{% endif %}
+					</tr>
+				</thead>
 				{% for list in order_list %}
 					<tr>
 						<td>{{ list.ref_number }}</td>
