--- a/app/templates/inventory_management/purchase_list.html
+++ b/app/templates/inventory_management/purchase_list.html
@@ -77,15 +77,15 @@
 			<table class="sort_table table table-bordered table-hover text-center" id="orders_list_table">
 				<thead>
 					<tr>
-						<th>Reference No</th>
-						<th>Name</th>
-						<th>Price Each</th>
-						<th>Quantity</th>
-						<th>Total Price</th>
-						<th>Supplier</th>
-						<th>Added by</th>
+						<th style="width:150px;">Reference No</th>
+						<th style="width:500px;">Name</th>
+						<th style="width:50px;">Price Each</th>
+						<th style="width:40px;">Quantity</th>
+						<th style="width:50px;">Total Price</th>
+						<th style="width:150px;">Supplier</th>
+						<th style="width:50px;">Added by</th>
 						{% if not purchase.date_purchased %}
-						<th>Action</th>
+						<th style="width:40px;">Action</th>
 						{% endif %}
 					</tr>
 				</thead>
