--- a/app/templates/inventory_management/purchases.html
+++ b/app/templates/inventory_management/purchases.html
@@ -24,11 +24,11 @@
 						{% for p in purchase.purchase_created_by %}
 						<td>{{ p.username }}</td>
 						{% endfor %}
-						<td>{{ purchase.date_created.strftime('%Y-%m-%d') }}</td>
+						<td>{{ moment(purchase.date_created).format('lll') }}</td>
 						{% if purchase.date_purchased %}
 							{% for p in purchase.purchased_by %}
 								<td>{{ p.username }}</td>
-								<td>{{ purchase.date_purchased.strftime('%Y-%m-%d') }}</td>
+								<td>{{ moment(purchase.date_purchased).format('lll') }}</td>
 							{% endfor %}
 							{% if purchase.purchase_order_complete == True %}
 								<td>Delivery completed</td>
