--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,6 +39,7 @@
 					{{ nav_link('inventory_management_demo', 'Inventory Demo') }}
 					{% if current_user == superuser %}
 					{{ nav_link('stream', 'Stream')}}
+					{{ nav_link('products_wiki', 'Products Wiki')}}
 					{% endif %}
 					{% if current_user.is_authenticated %}
 					{% if users %}
