--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -26,7 +26,7 @@
 					<td class="col-md-3 admin-table"><a href="{{ url_for('user', username=affiliate.users.username) }}">{{ affiliate.users.firstname }} {{ affiliate.users.lastname}} ({{ affiliate.users.username}})</a></td>
 					<td class="col-md-3 admin-table">{{ affiliate.title}}</a></td>
 					<td class="admin-table"><a href="{{ url_for('manage_affiliate', user_id=affiliate.user_id, comp_id=affiliate.company_id) }}" >Edit Role</a></td>
-					<td class="admin-table"><a href="{{ url_for('retire_affiliate', user_id=affiliate.user_id, comp_id=affiliate.company_id) }}">Retire</a></td>
+					<td class="admin-table"><a data-toggle="modal" href="#" data-target="#retire_{{ affiliate.user_id }}">Retire</a></td>
 				</tr>
 					{% endfor %}
 				{% endif %}
@@ -46,7 +46,7 @@
 				<tr>
 					<td class="col-md-4 admin-table"><a href="{{ url_for('user', username=pending_affiliate.users.username) }}">{{ pending_affiliate.users.firstname}} {{ pending_affiliate.users.lastname}} ({{ pending_affiliate.users.username}})</a></td>
 					<td class="col-md-1 admin-table"><a href="{{ url_for('accept_affiliate', user_id=pending_affiliate.user_id, comp_id=pending_affiliate.company_id) }}">Accept</a></td>
-					<td class="col-md-1 admin-table"><a href="{{ url_for('delete_affiliate', user_id=pending_affiliate.user_id, comp_id=pending_affiliate.company_id) }}">Reject</a></td>
+					<td class="col-md-1 admin-table"><a data-toggle="modal" href="#" data-target="#reject_{{ affiliate.user_id }}">Reject</a></td>
 				</tr>
 				{% endfor %}
 			</table>
@@ -58,13 +58,10 @@
 			<table class="table table-striped table-hover">
 				<tr class="text-center">
 					<th>Full name (username)</th>
-					
-					
 				</tr>
 				{% for past_affiliate in past_affiliates %}
 				<tr>
 					<td class="col-md-4 admin-table"><a href="{{ url_for('user', username=past_affiliate.users.username) }}">{{ past_affiliate.users.firstname}} {{ past_affiliate.users.lastname}} ({{ past_affiliate.users.username}})</a></td>
-					
 				</tr>
 				{% endfor %}
 			</table>
@@ -72,4 +69,40 @@
 		</div>
 	</div>
 </div>
+{% for affiliate in affiliates %}
+<div class="modal fade" id="retire_{{ affiliate.user_id }}" tabindex="-1" role="dialog" aria-labelledby="{{ affiliate.user_id }}Label">
+  <div class="modal-dialog" role="document">
+	<div class="modal-content">
+	  <div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		<p><h4>Retire Affiliate: </h4></p>
+	  </div>
+	  <div class="modal-body">
+		<p><h4>Affiliate Name: {{ affiliate.users.firstname }} {{ affiliate.users.lastname }} ( {{ affiliate.users.username}} )</h4></p>
+		<p><h4>Title: {{ affiliate.title }}</h4></p>
+		<p><h4>Start Date: {{ affiliate.start_date }}</h4></p>
+	  </div>
+	  <div class="modal-footer">
+		<a class="btn btn-default" href="{{ url_for('retire_affiliate', user_id=affiliate.user_id, comp_id=affiliate.company_id) }}" role="button">Retire</a>
+	  </div>
+	</div>
+  </div>
+</div>	
+<div class="modal fade" id="reject_{{ affiliate.user_id }}" tabindex="-1" role="dialog" aria-labelledby="{{ affiliate.user_id }}Label">
+  <div class="modal-dialog" role="document">
+	<div class="modal-content">
+	  <div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		<p><h4>Reject Affiliate Request: </h4></p>
+	  </div>
+	  <div class="modal-body">
+		<p><h4>Affiliate Name: {{ affiliate.users.firstname }} {{ affiliate.users.lastname }} ( {{ affiliate.users.username}} )</h4></p>
+	  </div>
+	  <div class="modal-footer">
+		<a class="btn btn-default" href="{{ url_for('delete_affiliate', user_id=pending_affiliate.user_id, comp_id=pending_affiliate.company_id) }}" role="button">Reject</a>
+	  </div>
+	</div>
+  </div>
+</div>	
+{% endfor %}
 {% endblock %}
